Добавлено vertical-align for ie8

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -462,6 +462,7 @@ ul {
 	min-height: 354px;
 	margin-right: 25px;
 	margin-bottom: 24px;
+	vertical-align: top;/*чтобы два блока не съезжали в IE8*/
 }
 
 .catalog-goods-container {
